fix(minicart): fix overlay and modal scrollbar

--- a/styles/scss/vtex.modal-layout.scss
+++ b/styles/scss/vtex.modal-layout.scss
@@ -19,6 +19,19 @@
 }
 .paperScrollContent {
   max-height: 100% !important;
+  &::-webkit-scrollbar-thumb {
+    background: #757575;
+    width: 4px;
+    height: 4px;
+  }
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background: #fff;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
 }
 
 @media screen and (min-width: 75em) {
